--- a/index.html
+++ b/index.html
@@ -1,11 +1,22 @@
 <!DOCTYPE html>
 <html>
-    <body align=center style="font-family: Arial, Helvetica, sans-serif">
-        <h1>YggChain</h1>
-        <p>A Price-Stable Cryptocurrency for Everyday Transaction</p>
-        <p><img src="img/coin.png" width=200px></p>
-        <a href="https://yggchain.github.io/wp.pdf" target=_blank>(Yellowish) White Paper</a>
-        <p>Join our <a href="https://t.me/joinchat/Iq3KKRCXgyl1HJN27-o5Pg" target=_blank>Telegram Group</a></p>
-        <p>Contact us at <a href=mailto:yggchain@gmail.com>yggchain@gmail.com</a></p>
-    </body>
+	<body align=center style="font-family: Arial, Helvetica, sans-serif">
+		<h1>YggChain</h1>
+		<p>A Price-Stable Cryptocurrency for Everyday Transaction</p>
+		<p><img src="img/coin.png" width=200px></p>
+		<h3>Key Features</h3>
+		<p>Double Tokens Price-Stable (<a href="https://bravenewcoin.com/assets/Whitepapers/A-Note-on-Cryptocurrency-Stabilisation-Seigniorage-Shares.pdf" target=_blank>Seignoriage Shares)</a></p>
+		<p>Public Permissionless Blockchain</p>
+		<p>ASIC-Resistant <a href="https://github.com/ifdefelse/ProgPOW" target=_blank>ProgPoW</a></p>
+		<p>Fully decenterlized PoS by our novel Staking Service Network</p>
+		<p>Instant Confirmation<br>(Input locking for every transaction. Completely safe against double-spend attacks.)</p>
+		<p>Economic-Driven Sharding Protocol</p>
+		<h3>Papers</h3>
+		<a href="https://yggchain.github.io/wp.pdf" target=_blank>(Yellowish) White Paper</a>
+		<h3>Community</h3>
+		<p>
+			Join our <a href="https://t.me/joinchat/Iq3KKRCXgyl1HJN27-o5Pg" target=_blank>Telegram Group</a><br>
+			Contact us at <a href=mailto:yggchain@gmail.com>yggchain@gmail.com</a>
+		</p>
+	</body>
 </html>
