Update standalone SSN technical paper.

--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
 		<p>Double Tokens Price-Stable (<a href="https://bravenewcoin.com/assets/Whitepapers/A-Note-on-Cryptocurrency-Stabilisation-Seigniorage-Shares.pdf" target=_blank>Seignoriage Shares)</a></p>
 		<p>Public Permissionless Blockchain</p>
 		<p>ASIC-Resistant <a href="https://github.com/ifdefelse/ProgPOW" target=_blank>ProgPoW</a></p>
-		<p>Fully decenterlized PoS by our novel Staking Service Network</p>
+		<p>Fully decenterlized PoS by our novel <a href="ssn.pdf" target=_blank>Staking Service Network</a></p>
 		<p>Instant Confirmation<br>(Input locking for every transaction. Completely safe against double-spend attacks.)</p>
 		<p>Economic-Driven Sharding Protocol</p>
 		<h3>Papers</h3>
-		<a href="https://yggchain.github.io/wp.pdf" target=_blank>(Yellowish) White Paper</a>
+		<a href="wp.pdf" target=_blank>(Yellowish) White Paper</a>
 		<h3>Community</h3>
 		<p>
 			Join our <a href="https://t.me/joinchat/Iq3KKRCXgyl1HJN27-o5Pg" target=_blank>Telegram Group</a><br>
