Use my own email.

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 		<h3>Community</h3>
 		<p>
 			Join our <a href="https://t.me/joinchat/Iq3KKRCXgyl1HJN27-o5Pg" target=_blank>Telegram Group</a><br>
-			Contact us at <a href=mailto:yggchain@gmail.com>yggchain@gmail.com</a>
+			Contact us at <a href=mailto:anh@yggchain.io>anh@yggchain.io</a>
 		</p>
 	</body>
 </html>
