--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 					<div class="col-lg-6 col-md-12 col-sm-12 col-xs-12 align-self-center">
 						<h1>ENDURIO</h1>
 						<p>Bring the real usability to cryptocurrency in retail and e-commerce market, with a price-stable token, unlimited scalability and instant confirmation.</p>
-						<a href="http://endur.io/wp.pdf" class="btn-secondary-box">Download Whitepaper</a>
+						<a href="EndurioWhitePaper.pdf" target=_blank class="btn-secondary-box">Download Whitepaper</a>
 					</div>
 					<div class="col-lg-6 col-md-12 col-sm-12 col-xs-12 align-self-center">
 						<div class="header-image">
@@ -169,7 +169,7 @@
 					<div class="left-text">
 						<p>Built on the time-tested blockchain technology with ASIC-proof and anti-pool mining algorithm, Endurio is secured by the most decentralized Proof of Work consensus ever possible. With our novel Staking Service Network and Economic-driven Sharding Protocol, many advanced services and features can be delivered with unlimited scalability for the payment network.</p>
 					</div>
-					<a href="http://endur.io/yp.pdf" class="btn-secondary-line mobile-bottom-fix">Download Yellowpaper</a>
+					<a href="EndurioYellowPaper.pdf" target=_blank class="btn-secondary-line mobile-bottom-fix">Download Yellowpaper</a>
 				</div>
 				<div class="col-lg-6 col-md-6 col-sm-12 align-self-center">
 					<img src="assets/images/theme-1-about.svg" class="img-fluid float-right" alt="Arda ICO">
