Yellow Paper Draft

--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
 					<div class="left-text">
 						<p>Built on the time-tested blockchain technology with ASIC-proof and anti-pool mining algorithm, Endurio is secured by the most decentralized Proof of Work consensus ever possible. With our novel Staking Service Network and Economic-driven Sharding Protocol, many advanced services and features can be delivered with unlimited scalability for the payment network.</p>
 					</div>
-					<a href="EndurioYellowPaper.pdf" target=_blank class="btn-secondary-line mobile-bottom-fix">Download Yellowpaper</a>
+					<a href="EndurioYellowPaper.pdf" target=_blank class="btn-secondary-line mobile-bottom-fix">Yellowpaper (Draft)</a>
 				</div>
 				<div class="col-lg-6 col-md-6 col-sm-12 align-self-center">
 					<img src="assets/images/theme-1-about.svg" class="img-fluid float-right" alt="Arda ICO">
