--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 						<!-- ***** Menu Start ***** -->
 						<ul class="nav">
 							<li><a href="#features">FEATURES</a></li>
-							<li><a href="#technical-summary">TECHNICAL SUMMARY</a></li>
+							<li><a href="#technical-summary">TECHNOLOGY</a></li>
 							<li><a href="#comparision">COMPARISION</a></li>
 							<li><a href="#roadmap">ROADMAP</a></li>
 							<li><a href="#faq">FAQ</a></li>
@@ -157,11 +157,6 @@
 	<section class="section" id="technical-summary">
 		<div class="container">
 			<div class="row">
-				<div class="col-lg-12">
-					<div class="center-heading">
-						<h2 class="section-title">Technical Summary</h2>
-					</div>
-				</div>
 				<div class="col-lg-6 col-md-6 col-sm-12 align-self-center">
 					<div class="left-heading">
 						<h2 class="section-title">A balanced combination of technology.</h2>
