--- a/index.html
+++ b/index.html
@@ -449,10 +449,10 @@
 			<div class="container">
 				<div class="row">
 					<div class="col-lg-12">
-						<h1 class="section-title">Join Us On Telegram</h1>
+						<h1 class="section-title">Join Us On</h1>
 					</div>
 					<div class="offset-lg-3 col-lg-6">
-						<a href="https://t.me/joinchat/Iq3KKRCXgyl1HJN27-o5Pg" class="btn-white-line" target="_blank">Join Us On Telegram</a>
+						<a href="https://t.me/joinchat/Iq3KKRCXgyl1HJN27-o5Pg" class="btn-white-line" target="_blank">Telegram</a>
 					</div>
 				</div>
 			</div>
