Anna profile pic.

--- a/index.html
+++ b/index.html
@@ -663,7 +663,7 @@
 					<div class="team-round">
 						<div class="profile">
 							<div class="img">
-								<img src="assets/images/2.jpg" alt="">
+								<img src="assets/images/team/anna-doan.jpg" alt="">
 								<ul class="social">
 								</ul>
 							</div>
