--- a/index.html
+++ b/index.html
@@ -709,8 +709,9 @@
 					<div class="team-round">
 						<div class="profile">
 							<div class="img">
-								<img src="assets/images/3.jpg" alt="">
+								<img src="assets/images/team/bitcoin-benny.jpg" alt="">
 								<ul class="social">
+									<li><a href="http://bitcoinbenny.com/" target="_blank"><i class="fa fa-id-badge"></i></a></li>
 								</ul>
 							</div>
 						</div>
