--- a/index.html
+++ b/index.html
@@ -656,7 +656,7 @@
 						</div>
 						<h3 class="team-name">Antony Pham</h3>
 						<span>CTO, Founder</span>
-						<span>Blockchain advisor of Nexty Platform</span>
+						<span>Blockchain Advisor of Nexty Platform</span>
 					</div>
 				</div>
 				<div class="col-lg-3 col-md-4 col-sm-6 col-xs-12 team-member" data-scroll-reveal="enter bottom move 50px over 0.6s after 0.4s">
@@ -670,9 +670,26 @@
 						</div>
 						<h3 class="team-name">Anna Doan</h3>
 						<span>CFO</span>
-						<span>FRM & CFA charterholder</span>
+						<span>FRM & CFA Charterholder</span>
 					</div>
 				</div>
+				<div class="col-lg-3 col-md-4 col-sm-6 col-xs-12 team-member" data-scroll-reveal="enter bottom move 50px over 0.6s after 0.8s">
+						<div class="team-round">
+							<div class="profile">
+								<div class="img">
+									<img src="assets/images/team/michael-chu.jpg" alt="">
+									<ul class="social">
+										<li><a href="https://fb.com/chu.ducminh" target="_blank"><i class="fa fa-facebook"></i></a></li>
+										<li><a href="https://twitter.com/minhcd" target="_blank"><i class="fa fa-twitter"></i></a></li>
+										<li><a href="https://www.linkedin.com/in/chu-duc-minh/" target="_blank"><i class="fa fa-linkedin"></i></a></li>
+									</ul>
+								</div>
+							</div>
+							<h3 class="team-name">Michael Chu</h3>
+							<span>Cryptoeconomics & Blockchain Advisor</span>
+							<span>CEO of Midas Protocol</span>
+						</div>
+					</div>
 				<div class="col-lg-3 col-md-4 col-sm-6 col-xs-12 team-member" data-scroll-reveal="enter bottom move 50px over 0.6s after 0.6s">
 					<div class="team-round">
 						<div class="profile">
@@ -684,25 +701,8 @@
 							</div>
 						</div>
 						<h3 class="team-name">Thanh Dao</h3>
-						<span>Community advisor</span>
+						<span>Technical Advisor</span>
 						<span>CTO of Nexty Platform</span>
-					</div>
-				</div>
-				<div class="col-lg-3 col-md-4 col-sm-6 col-xs-12 team-member" data-scroll-reveal="enter bottom move 50px over 0.6s after 0.8s">
-					<div class="team-round">
-						<div class="profile">
-							<div class="img">
-								<img src="assets/images/team/michael-chu.jpg" alt="">
-								<ul class="social">
-									<li><a href="https://fb.com/chu.ducminh" target="_blank"><i class="fa fa-facebook"></i></a></li>
-									<li><a href="https://twitter.com/minhcd" target="_blank"><i class="fa fa-twitter"></i></a></li>
-									<li><a href="https://www.linkedin.com/in/chu-duc-minh/" target="_blank"><i class="fa fa-linkedin"></i></a></li>
-								</ul>
-							</div>
-						</div>
-						<h3 class="team-name">Michael Chu</h3>
-						<span>Cryptoeconomics & Blockchain advisor</span>
-						<span>CEO of Midas Protocol</span>
 					</div>
 				</div>
 				<div class="col-lg-3 col-md-4 col-sm-6 col-xs-12 team-member" data-scroll-reveal="enter bottom move 50px over 0.6s after 0.8s">
@@ -716,7 +716,8 @@
 							</div>
 						</div>
 						<h3 class="team-name">Bitcoin Benny</h3>
-						<span>Blockchain incubator & Crypto influencer</span>
+						<span>Blockchain Incubator</span>
+						<span>Crypto Influencer</span>
 					</div>
 				</div>
 				<div class="col-lg-3 col-md-4 col-sm-6 col-xs-12 team-member" data-scroll-reveal="enter bottom move 50px over 0.6s after 0.8s">
@@ -729,8 +730,9 @@
 								</ul>
 							</div>
 						</div>
-						<h3 class="team-name">Manh-Hung Nguyen</h3>
-						<span>Ph.D. in Economics Advisor</span>
+						<h3 class="team-name">Manh-Hung Nguyen, Ph.D.</h3>
+						<span>Economics Advisor</span>
+						<span>Researcher at Toulouse School of Economics</span>
 					</div>
 				</div>
 			</div>
