Fix anchor name.

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 			</div>
 		</div>
 		<div class="scroll-to">
-			<a href="#what-is-ico">
+			<a href="#features">
 				<i class="fa fa-angle-double-down" aria-hidden="true"></i>
 			</a>
 		</div>
