--- a/index.html
+++ b/index.html
@@ -625,7 +625,7 @@
 							</div>
 						</div>
 						<h3 class="team-name">Antony Pham</h3>
-						<span>CTO, Founder</span>
+						<span>CTO, Co-founder</span>
 						<span>Blockchain Advisor of Nexty Platform</span>
 					</div>
 				</div>
@@ -639,7 +639,7 @@
 							</div>
 						</div>
 						<h3 class="team-name">Anna Doan</h3>
-						<span>CFO</span>
+						<span>CFO, Co-founder</span>
 						<span>FRM & CFA Charterholder</span>
 					</div>
 				</div>
@@ -676,6 +676,21 @@
 					</div>
 				</div>
 				<div class="col-lg-3 col-md-4 col-sm-6 col-xs-12 team-member" data-scroll-reveal="enter bottom move 50px over 0.6s after 0.8s">
+						<div class="team-round">
+							<div class="profile">
+								<div class="img">
+									<img src="assets/images/team/manh-hung-nguyen.jpg" alt="manh-hung-nguyen">
+									<ul class="social">
+										<li><a href="https://www.tse-fr.eu/people/manh-hung-nguyen?lang=en" target="_blank"><i class="fa fa-id-badge"></i></a></li>
+									</ul>
+								</div>
+							</div>
+							<h3 class="team-name">Manh-Hung Nguyen, Ph.D.</h3>
+							<span>Economic Advisor</span>
+							<span>Researcher at Toulouse School of Economics</span>
+						</div>
+					</div>
+				<div class="col-lg-3 col-md-4 col-sm-6 col-xs-12 team-member" data-scroll-reveal="enter bottom move 50px over 0.6s after 0.8s">
 					<div class="team-round">
 						<div class="profile">
 							<div class="img">
@@ -688,21 +703,6 @@
 						<h3 class="team-name">Bitcoin Benny</h3>
 						<span>Blockchain Incubator</span>
 						<span>Crypto Influencer</span>
-					</div>
-				</div>
-				<div class="col-lg-3 col-md-4 col-sm-6 col-xs-12 team-member" data-scroll-reveal="enter bottom move 50px over 0.6s after 0.8s">
-					<div class="team-round">
-						<div class="profile">
-							<div class="img">
-								<img src="assets/images/team/manh-hung-nguyen.jpg" alt="manh-hung-nguyen">
-								<ul class="social">
-									<li><a href="https://www.tse-fr.eu/people/manh-hung-nguyen?lang=en" target="_blank"><i class="fa fa-id-badge"></i></a></li>
-								</ul>
-							</div>
-						</div>
-						<h3 class="team-name">Manh-Hung Nguyen, Ph.D.</h3>
-						<span>Economics Advisor</span>
-						<span>Researcher at Toulouse School of Economics</span>
 					</div>
 				</div>
 			</div>
