Metadata and Team profile

--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>Endur - A Scalable Price-Stable Cryptocurrency</title>
-	<meta name="description" content="Endur - A Scalable Price-Stable Cryptocurrency" />
-	<meta name="keywords" content="bitcoin, ethereum, monero, ico, token, free token, btc, eth, scalable, stable, cryotocurrency" />
-	<meta name="author" content="tempload"/>
+	<title>Endurio - A scalable stablecoin for everyday transaction</title>
+	<meta name="description" content="Endurio - A scalable stablecoin for everyday transaction" />
+	<meta name="keywords" content="bitcoin, ethereum, endurio, ico, token, btc, eth, scalable, stable, cryotocurrency, elastic, supply, sharding, instant confirmation" />
+	<meta name="author" content="Antony"/>
 
 	<!-- Favicon -->
 	<link rel="icon" type="image/png" href="assets/images/endurio-favicon.png" />
@@ -649,8 +649,6 @@
 								<div class="img">
 									<img src="assets/images/team/michael-chu.jpg" alt="">
 									<ul class="social">
-										<li><a href="https://fb.com/chu.ducminh" target="_blank"><i class="fa fa-facebook"></i></a></li>
-										<li><a href="https://twitter.com/minhcd" target="_blank"><i class="fa fa-twitter"></i></a></li>
 										<li><a href="https://www.linkedin.com/in/chu-duc-minh/" target="_blank"><i class="fa fa-linkedin"></i></a></li>
 									</ul>
 								</div>
