Remove the ICO stuff, for now.

--- a/index.html
+++ b/index.html
@@ -313,7 +313,6 @@
 						</div>
 						<div class="col-lg-7 col-md-7 col-sm-12">
 							<p>Double tokens & bidding system: user can transfer 2 types of token on-chain, and can bid/ask for NDR/STB directly from the wallet.</p>
-							<P>Both the tokens will be listed on an exchange for market valuation and liquidation.</P>
 						</div>
 					</div>
 				</div>
@@ -328,8 +327,7 @@
 							<div class="status"></div>
 						</div>
 						<div class="col-lg-7 col-md-7 col-sm-12">
-							<p>The price stabilization mechanism is activated.</p>
-							<P>End private fundraising and launch the ICO if necessary.</P>
+							<P>Both the tokens will be listed on exchanges and the price stabilization mechanism is activated.</p>
 						</div>
 					</div>
 				</div>
