--- a/index.html
+++ b/index.html
@@ -623,8 +623,23 @@
 							</div>
 						</div>
 						<h3 class="team-name">Antony Pham</h3>
-						<span>CTO, Co-founder</span>
+						<span>Chief Technology Officer, Co-founder</span>
 						<span>Blockchain Advisor of Nexty Platform</span>
+					</div>
+				</div>
+				<div class="col-lg-3 col-md-4 col-sm-6 col-xs-12 team-member" data-scroll-reveal="enter bottom move 50px over 0.6s after 0.8s">
+					<div class="team-round">
+						<div class="profile">
+							<div class="img">
+								<img src="assets/images/team/michael-chu.jpg" alt="">
+								<ul class="social">
+									<li><a href="https://www.linkedin.com/in/chu-duc-minh/" target="_blank"><i class="fa fa-linkedin"></i></a></li>
+								</ul>
+							</div>
+						</div>
+						<h3 class="team-name">Michael Chu</h3>
+						<span>Chief Strategy Officer, Co-founder</span>
+						<span>CEO of Midas Protocol</span>
 					</div>
 				</div>
 				<div class="col-lg-3 col-md-4 col-sm-6 col-xs-12 team-member" data-scroll-reveal="enter bottom move 50px over 0.6s after 0.4s">
@@ -637,25 +652,10 @@
 							</div>
 						</div>
 						<h3 class="team-name">Anna Doan</h3>
-						<span>CFO, Co-founder</span>
+						<span>Chief Financial Officer, Co-founder</span>
 						<span>FRM & CFA Charterholder</span>
 					</div>
 				</div>
-				<div class="col-lg-3 col-md-4 col-sm-6 col-xs-12 team-member" data-scroll-reveal="enter bottom move 50px over 0.6s after 0.8s">
-						<div class="team-round">
-							<div class="profile">
-								<div class="img">
-									<img src="assets/images/team/michael-chu.jpg" alt="">
-									<ul class="social">
-										<li><a href="https://www.linkedin.com/in/chu-duc-minh/" target="_blank"><i class="fa fa-linkedin"></i></a></li>
-									</ul>
-								</div>
-							</div>
-							<h3 class="team-name">Michael Chu</h3>
-							<span>Cryptoeconomics & Blockchain Advisor</span>
-							<span>CEO of Midas Protocol</span>
-						</div>
-					</div>
 				<div class="col-lg-3 col-md-4 col-sm-6 col-xs-12 team-member" data-scroll-reveal="enter bottom move 50px over 0.6s after 0.6s">
 					<div class="team-round">
 						<div class="profile">
