Grammar and spelling.

--- a/index.html
+++ b/index.html
@@ -456,7 +456,7 @@
               </div>
               <div id="faqCollapse-1" class="collapse" aria-labelledby="faqHeading-1" data-parent="#accordion">
                 <div class="card-body">
-                  <p>It is. Short-term stabilization is provided by the market itself when we can assure that the price will eventually return. In an assured sideways market, traders can profit by buying low and selling high, effectively stabilize the price even closer to the target value. Over the time the more adopted STB is the more stable the token price is.</p>
+                  <p>It is. Short-term stabilization is provided by the market itself when we can assure that the price will eventually return. In an assured sideways market, traders can profit by buying low and selling high, effectively stabilize the price even closer to the target value. Over the time, the more adopted STB is, the more stable the token price will be.</p>
                 </div>
               </div>
             </div>
@@ -558,10 +558,12 @@
 							<div id="faqCollapse-7" class="collapse" aria-labelledby="faqHeading-7" data-parent="#accordion">
 								<div class="card-body">
                   <p>Our sharding protocol is economic-driven. It sidesteps many challenges other pure-technical sharding protocols (like Ethereum) have to face, including:</p>
-                  <ul>
-                    <li>Scalability and decentralization of super-full and top-level nodes (where all state from all shards is verified).</li>
-                    <li>High frequency of cross-shard communication and transactions.</li>
-                  </ul>
+                  <p>
+										<ul>
+											<li>&bull; Scalability and decentralization of super-full and top-level nodes (where all state from all shards is verified).</li>
+                  		<li>&bull; High frequency of cross-shard communication and transactions.</li>
+										</ul>
+									</p>
 									<p>Yggdrasil sharding protocol has no super-full node, each node always works on only one shard at a time, and most of the transactions occur locally in one shard. These features make it’s extremely efficient scaling solution, just like the sharding architect of the traditional database.</p>
 								</div>
 							</div>
