--- a/index.html
+++ b/index.html
@@ -669,8 +669,8 @@
 							</div>
 						</div>
 						<h3 class="team-name">Thanh Dao</h3>
-						<span>Technical Advisor</span>
-						<span>CTO of Nexty Platform</span>
+						<span>Blockchain Advisor</span>
+						<span>CTO, Founder of Nexty Platform</span>
 					</div>
 				</div>
 				<div class="col-lg-3 col-md-4 col-sm-6 col-xs-12 team-member" data-scroll-reveal="enter bottom move 50px over 0.6s after 0.8s">
@@ -698,9 +698,9 @@
 								</ul>
 							</div>
 						</div>
-						<h3 class="team-name">Bitcoin Benny</h3>
-						<span>Blockchain Incubator</span>
-						<span>Crypto Influencer</span>
+						<h3 class="team-name">Ben "Bitcoin Benny" Fairbank</h3>
+						<span>Blockchain Incubator & Influencer</span>
+						<span>General Manager of Komodo Platform</span>
 					</div>
 				</div>
 			</div>
