--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
 							<i class="fa fa-random"></i>
 						</div>
 						<h5 class="features-title">Elastic Supply Stablecoin</h5>
-						<p>Utilize two tokens system with one (NDR) takes all the price volatility for the other (STB), keeping STB price stabilized to a target value chosen by the network itself. Be it a fiat money (USD), a basket of currencies (XDR), or a market basket, it’s all up to you, the user of the network.</p>
+						<p>Utilize two tokens system with one (NDR) takes all the price volatility for the other (STB), keeping STB price stabilized to a target value chosen by the network. Be it a fiat money (USD), a basket of currencies (XDR), or a market basket, it’s all up to you, the user of the network.</p>
 					</div>
 				</div>
 				<div class="col-lg-4 col-md-4 col-sm-6 col-xs-12">
