--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
 							<i class="fa fa-code-fork"></i>
 						</div>
 						<h5 class="features-title">Economic-driven Sharding Protocol</h5>
-						<p>Yggdrasil sharding protocol dynamically split the workload to more shards as the chain is reaching saturation. Shards are split by transaction values and are protected with proportional mining and staking power, this economic-driven property allows Endurio to tackle many challenges other pure-technical sharding protocols have.</p>
+						<p>Yggdrasil sharding protocol dynamically split the workload to more shards as the chain is reaching saturation. Shards are split by transaction values and protected with proportional mining and staking power. This economic-driven property allows Endurio to sidestep many challenges other pure-technical sharding protocols have to face.</p>
 					</div>
 				</div>
 				<div class="col-lg-4 col-md-4 col-sm-6 col-xs-12">
