--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 				<div class="row">
 					<div class="col-lg-6 col-md-12 col-sm-12 col-xs-12 align-self-center">
 						<h1>ENDURIO</h1>
-						<p>Bring the real usability to cryptocurrency in retail and e-commerce market, with a price-stable token, unlimited scalability, and instant confirmation.</p>
+						<p>Bring the real usability to cryptocurrency in retail and e-commerce market, with an elastic supply stablecoin, unlimited scalability, and instant confirmation.</p>
 						<a href="EndurioWhitePaper.pdf" target=_blank class="btn-secondary-box">Download Whitepaper</a>
 					</div>
 					<div class="col-lg-6 col-md-12 col-sm-12 col-xs-12 align-self-center">
@@ -98,8 +98,8 @@
 						<div class="icon">
 							<i class="fa fa-random"></i>
 						</div>
-						<h5 class="features-title">Elastic Supply Stablecoin</h5>
-						<p>Utilize two tokens system with one (NDR) takes all the price volatility for the other (STB), keeping STB price stabilized to a target value chosen by the network. Be it a fiat money (USD), a basket of currencies (XDR), or a market basket, it’s all up to you, the user of the network.</p>
+						<h5 class="features-title">Double Tokens Stablecoin</h5>
+						<p>By contracting and expanding the circulating supply, the NDR token is able to absorb all the market volatility of STB token, keeping its price stabilized around a target value chosen by the network. Be it a single fiat currency (USD), a basket of currencies (XDR), or a market basket, it’s all up to you - the user of the network.</p>
 					</div>
 				</div>
 				<div class="col-lg-4 col-md-4 col-sm-6 col-xs-12">
@@ -117,7 +117,7 @@
 							<i class="fa fa-clock-o"></i>
 						</div>
 						<h5 class="features-title">Instant Confirmation</h5>
-						<p>Input Locking Service provides instant confirmation with 100% warranty no double-spend for all transactions. This allows Endurio to have a wonderful user experience while keeping the block time long enough to preserve the security and consistency of the chain.</p>
+						<p>Input Locking Service provides instant confirmation with 100% warranty of no double-spend for all transactions. This allows Endurio to have a pleasing user experience while keeping the block time long enough to preserve the security and consistency of the chain.</p>
 					</div>
 				</div>
 				<div class="col-lg-4 col-md-4 col-sm-6 col-xs-12">
