Michael former co-founder of tmc.

--- a/index.html
+++ b/index.html
@@ -641,7 +641,8 @@
 						</div>
 						<h3 class="team-name">Michael Chu</h3>
 						<span>Chief Strategy Officer, Co-founder</span>
-						<span>CEO of Midas Protocol</span>
+						<span>CEO, Founder of Midas Protocol</span>
+						<span>Former Co-founder of Tomochain</span>
 					</div>
 				</div>
 				<div class="col-lg-3 col-md-4 col-sm-6 col-xs-12 team-member" data-scroll-reveal="enter bottom move 50px over 0.6s after 0.4s">
