--- a/index.html
+++ b/index.html
@@ -225,18 +225,18 @@
 						<td>Expansion</td>
 						<td>On-chain public bidding</td>
 						<td>Pro-rata distribution</td>
-						<td>Increase interest rate.</td>
+						<td>Increasing interest rate.</td>
 						<td>Centralized process..</td>
 					</tr>
 					<tr>
 						<td>Contraction</td>
 						<td>On-chain public bidding</td>
 						<td>Issuing bond.</td>
-						<td>Decrease interest rate.Enforce liquidation of risky collateral.</td>
+						<td>Decreasing interest rate & enforcing liquidation of risky collateral.</td>
 						<td>Centralized process.</td>
 					</tr>
 					<tr>
-						<td>Pegged Value</td>
+						<td>Pegged/Anchored Value</td>
 						<td>Basket of Values voted by SSN</td>
 						<td>USD</td>
 						<td>USD</td>
