--- a/index.html
+++ b/index.html
@@ -471,7 +471,7 @@
               <div id="faqCollapse-2" class="collapse" aria-labelledby="faqHeading-2" data-parent="#accordion">
                 <div class="card-body">
                   <p>Neither Seigniorage Shares nor Endurio has a magical mechanic to keep or raise the price of a token by itself. Seigniorage Shares only stabilizes a token around a target value to provide more usability for retail and e-commerce user, who don’t want to take the risk of fluctuating price. It solves the chicken and egg problem of cryptocurrency (fluctuated price drives user away, leaving only investors and traders, investors and traders are highly influenced by the market, hence the prices is extremely volatile).</p>
-                  <p>When we can stabilize a token value around a target value, we create the usability for it, so end users will come. Retails user doesn’t care (much) about the market, they just need a token to store and spend. The high level of usability will keep the stable-token in velocity, without being highly affected by the market force.</p>
+                  <p>When we can stabilize a token price around a target value, we create the usability for it, so end users will come. Retails user doesn’t care (much) about the market, they just need a token to store and spend. The high level of usability will keep the stable-token in velocity, without being highly affected by the market force.</p>
                 </div>
               </div>
             </div>
@@ -642,7 +642,7 @@
 						<h3 class="team-name">Michael Chu</h3>
 						<span>Chief Strategy Officer, Co-founder</span>
 						<span>CEO, Founder of Midas Protocol</span>
-						<span>Former Co-founder of Tomochain</span>
+						<span>Former Director of Blockchain Solutions at Tomochain</span>
 					</div>
 				</div>
 				<div class="col-lg-3 col-md-4 col-sm-6 col-xs-12 team-member" data-scroll-reveal="enter bottom move 50px over 0.6s after 0.4s">
