--- a/index.html
+++ b/index.html
@@ -719,7 +719,7 @@
 							<h3 class="section-title">Get In Touch</h3>
 							<ul class="list">
 								<li><i class="fa fa-envelope-o"></i><a href="mailto:antony@endur.io"> antony@endur.io</a></li>
-								<li><i class="fa fa-envelope-o"></i><a href="mailto:micheal@endur.io">micheal@endur.io</a></li>
+								<li><i class="fa fa-envelope-o"></i><a href="mailto:michael@endur.io">micheal@endur.io</a></li>
 								<li><i class="fa fa-envelope-o"></i><a href="mailto:anna@endur.io">anna@endur.io</a></li>
 								<li><i class="fa fa-paper-plane-o"></i><a href=" https://t.me/joinchat/Iq3KKRCXgyl1HJN27-o5Pg" target="_blank">Join us on Telegram</a></li>
 							</ul>
