--- a/index.html
+++ b/index.html
@@ -674,6 +674,21 @@
 						<span>CTO, Founder of Nexty Platform</span>
 					</div>
 				</div>
+				<div class="col-lg-3 col-md-4 col-sm-6 col-xs-12 team-member" data-scroll-reveal="enter bottom move 50px over 0.6s after 0.6s">
+					<div class="team-round">
+						<div class="profile">
+							<div class="img">
+								<img src="assets/images/team/ha-dang.jpg" alt="ha-dang">
+								<ul class="social">
+									<li><a href="https://www.linkedin.com/in/dvietha/" target="_blank"><i class="fa fa-linkedin"></i></a></li>
+								</ul>
+							</div>
+						</div>
+						<h3 class="team-name">Ha Dang</h3>
+						<span>Technical Advisor</span>
+						<span>Core Blockchain Specialist of Nexty Platform</span>
+					</div>
+				</div>
 				<div class="col-lg-3 col-md-4 col-sm-6 col-xs-12 team-member" data-scroll-reveal="enter bottom move 50px over 0.6s after 0.8s">
 						<div class="team-round">
 							<div class="profile">
