Update new roadmap

--- a/index.html
+++ b/index.html
@@ -296,118 +296,55 @@
 			<div class="row">
 				<div class="col-lg-12">
 					<div class="center-heading">
-						<h2 class="section-title">Roadmap</h2>
+						<h2 class="section-title">Our Roadmap</h2>
 					</div>
 				</div>
 			</div>
-		</div>
-		<div class="roadmap-full">
-			<div class="roadmap-item-full" data-scroll-reveal="enter bottom move 50px over 0.6s after 0.3s">
-				<div class="container">
-					<div class="row">
-						<div class="col-lg-3 col-md-3 col-sm-12">
-							<h6 class="date">Q4/2018</h6>
-						</div>
-						<div class="col-lg-2 col-md-2 col-sm-12">
-							<div class="status"></div>
-						</div>
-						<div class="col-lg-7 col-md-7 col-sm-12">
-							<p>Double tokens & bidding system: user can transfer 2 types of token on-chain, and can bid/ask for NDR/STB directly from the wallet.</p>
-						</div>
+			<div class="row roadmap-list align-items-end">
+				<div class="col-lg">
+					<div class="single-roadmap roadmap-sm roadmap-done">
+						<h6>Q4/2018</h6>
+						<p>Double tokens & bidding system: user can transfer 2 types of token on-chain, and can bid/ask for NDR/STB directly from the wallet.</p>
 					</div>
-				</div>
-			</div>
-			<div class="roadmap-item-full" data-scroll-reveal="enter bottom move 50px over 0.6s after 0.3s">
-				<div class="container">
-					<div class="row">
-						<div class="col-lg-3 col-md-3 col-sm-12">
-							<h6 class="date">Q1/2019</h6>
-						</div>
-						<div class="col-lg-2 col-md-2 col-sm-12">
-							<div class="status"></div>
-						</div>
-						<div class="col-lg-7 col-md-7 col-sm-12">
-							<P>Both the tokens will be listed on exchanges and the price stabilization mechanism is activated.</p>
-						</div>
+				</div><!-- .col  -->
+				<div class="col-lg width-0">
+					<div class="single-roadmap roadmap-down roadmap-done">
+						<h6>Q1/2019</h6>
+						<p>Both the tokens will be listed on exchanges and the price stabilization mechanism is activated.</p>
 					</div>
-				</div>
-			</div>
-			<div class="roadmap-item-full" data-scroll-reveal="enter bottom move 50px over 0.6s after 0.3s">
-				<div class="container">
-					<div class="row">
-						<div class="col-lg-3 col-md-3 col-sm-12">
-							<h6 class="date">Q2/2019</h6>
-						</div>
-						<div class="col-lg-2 col-md-2 col-sm-12">
-							<div class="status"></div>
-						</div>
-						<div class="col-lg-7 col-md-7 col-sm-12">
-							<p>Retail and e-commerce platforms integration.</p>
-						</div>
+				</div><!-- .col  -->
+				<div class="col-lg">
+					<div class="single-roadmap roadmap-lg">
+						<h6>Q2/2019</h6>
+						<p>Retail and e-commerce platforms integration.</p>
 					</div>
-				</div>
-			</div>
-			<div class="roadmap-item-full" data-scroll-reveal="enter bottom move 50px over 0.6s after 0.3s">
-				<div class="container">
-					<div class="row">
-						<div class="col-lg-3 col-md-3 col-sm-12">
-							<h6 class="date">Q3/2019</h6>
-						</div>
-						<div class="col-lg-2 col-md-2 col-sm-12">
-							<div class="status"></div>
-						</div>
-						<div class="col-lg-7 col-md-7 col-sm-12">
-							<p>On-chain Governance: Voting by Activity.</p>
-						</div>
+				</div><!-- .col  -->
+				<div class="col-lg width-0">
+					<div class="single-roadmap roadmap-down">
+						<h6>Q3/2019</h6>
+						<p>On-chain Governance: Voting by Activity.</p>
 					</div>
-				</div>
-			</div>
-			<div class="roadmap-item-full" data-scroll-reveal="enter bottom move 50px over 0.6s after 0.3s">
-				<div class="container">
-					<div class="row">
-						<div class="col-lg-3 col-md-3 col-sm-12">
-							<h6 class="date">Q1/2020</h6>
-						</div>
-						<div class="col-lg-2 col-md-2 col-sm-12">
-							<div class="status"></div>
-						</div>
-						<div class="col-lg-7 col-md-7 col-sm-12">
-							<p>Staking Service Network: Price Oracle & Input Locking.</p>
-						</div>
+				</div><!-- .col  -->
+				<div class="col-lg">
+					<div class="single-roadmap roadmap-sm">
+						<h6>Q1/2020</h6>
+						<p>Staking Service Network: Price Oracle & Input Locking.</p>
 					</div>
-				</div>
-			</div>
-			<div class="roadmap-item-full" data-scroll-reveal="enter bottom move 50px over 0.6s after 0.3s">
-				<div class="container">
-					<div class="row">
-						<div class="col-lg-3 col-md-3 col-sm-12">
-							<h6 class="date">Q2/2020</h6>
-						</div>
-						<div class="col-lg-2 col-md-2 col-sm-12">
-							<div class="status"></div>
-						</div>
-						<div class="col-lg-7 col-md-7 col-sm-12">
-							<p>Cross-chain Absorption.</p>
-						</div>
+				</div><!-- .col  -->
+				<div class="col-lg width-0">
+					<div class="single-roadmap roadmap-down">
+						<h6>Q2/2020</h6>
+						<p>Partnership for the future EcoSystem</p>
 					</div>
-				</div>
-			</div>
-			<div class="roadmap-item-full" data-scroll-reveal="enter bottom move 50px over 0.6s after 0.3s">
-				<div class="container">
-					<div class="row">
-						<div class="col-lg-3 col-md-3 col-sm-12">
-							<h6 class="date">Q4/2020</h6>
-						</div>
-						<div class="col-lg-2 col-md-2 col-sm-12">
-							<div class="status"></div>
-						</div>
-						<div class="col-lg-7 col-md-7 col-sm-12">
-							<p>Sharding.</p>
-						</div>
+				</div><!-- .col  -->
+				<div class="col-lg">
+					<div class="single-roadmap roadmap-lg">
+						<h6>Q4/2020</h6>
+						<p>Sharding.</p>
 					</div>
-				</div>
-			</div>
-		</div>
+				</div><!-- .col  -->
+			</div><!-- .row  -->
+		</div><!-- .container  -->
 	</section>
 	<!-- ***** Roadmap End ***** -->
 
