Make comparision table responsive

--- a/index.html
+++ b/index.html
@@ -184,26 +184,26 @@
 					</div>
 				</div>
 			</div>
-			<table class="table table-hover">
+			<table class="table table-hover table-responsive-sm">
 				<thead>
 					<tr>
-						<th></th>
-						<th>Endur.IO</th>
-						<th>Basis</th>
-						<th>DAI</th>
-						<th>USDT</th>
+						<th scope="col"></th>
+						<th scope="col">Endur.IO</th>
+						<th scope="col">Basis</th>
+						<th scope="col">DAI</th>
+						<th scope="col">USDT</th>
 					</tr>
 				</thead>
 				<tbody>
 					<tr>
-						<td>Tokens</td>
+						<td scope="row">Tokens</td>
 						<td>2</td>
 						<td>3</td>
 						<td>2+</td>
 						<td>1</td>
 					</tr>
 					<tr>
-						<td rowspan="3">Token function</td>
+						<td scope="row" rowspan="3">Token function</td>
 						<td>NDR: high risk high reward investment</td>
 						<td>Shares: low risk high reward investment</td>
 						<td>MKR: governance token, low risk low reward.</td>
@@ -222,63 +222,63 @@
 						<td>USDT: an IOU token</td>
 					</tr>
 					<tr>
-						<td>Expansion</td>
+						<td scope="row">Expansion</td>
 						<td>On-chain public bidding</td>
 						<td>Pro-rata distribution</td>
 						<td>Increasing interest rate.</td>
 						<td>Centralized process..</td>
 					</tr>
 					<tr>
-						<td>Contraction</td>
+						<td scope="row">Contraction</td>
 						<td>On-chain public bidding</td>
 						<td>Issuing bond.</td>
 						<td>Decreasing interest rate & enforcing liquidation of risky collateral.</td>
 						<td>Centralized process.</td>
 					</tr>
 					<tr>
-						<td>Pegged/Anchored Value</td>
+						<td scope="row">Pegged/Anchored Value</td>
 						<td>Basket of Values voted by SSN</td>
 						<td>USD</td>
 						<td>USD</td>
 						<td>USD</td>
 					</tr>
 					<tr>
-						<td>Consensus</td>
+						<td scope="row">Consensus</td>
 						<td>PoW/PoS Hybrid</td>
 						<td>N/A</td>
 						<td>Ethereum Smart Contract</td>
 						<td>Centralized service.</td>
 					</tr>
 					<tr>
-						<td>Supply limit</td>
+						<td scope="row">Supply limit</td>
 						<td>No</td>
 						<td>No</td>
 						<td>66% of collateral ETH</td>
 						<td>No</td>
 					</tr>
 					<tr>
-						<td>Instant Confirmation</td>
+						<td scope="row">Instant Confirmation</td>
 						<td>Yes</td>
 						<td>No</td>
 						<td>No</td>
 						<td>No</td>
 					</tr>
 					<tr>
-						<td>Sharding</td>
+						<td scope="row">Sharding</td>
 						<td>Yes</td>
 						<td>No</td>
 						<td>No</td>
 						<td>No</td>
 					</tr>
 					<tr>
-						<td>On-chain Governan</td>
+						<td scope="row">On-chain Governan</td>
 						<td>Yes</td>
 						<td>No</td>
 						<td>No</td>
 						<td>No</td>
 					</tr>
 					<tr>
-						<td>Tx Fee</td>
+						<td scope="row">Tx Fee</td>
 						<td>Minimal</td>
 						<td>N/A</td>
 						<td>Very high</td>
