No roadmap is done, yet.

--- a/index.html
+++ b/index.html
@@ -302,13 +302,13 @@
 			</div>
 			<div class="row roadmap-list align-items-end">
 				<div class="col-lg">
-					<div class="single-roadmap roadmap-sm roadmap-done">
+					<div class="single-roadmap roadmap-sm">
 						<h6>Q4/2018</h6>
 						<p>Double tokens & bidding system: user can transfer 2 types of token on-chain, and can bid/ask for NDR/STB directly from the wallet.</p>
 					</div>
 				</div><!-- .col  -->
 				<div class="col-lg width-0">
-					<div class="single-roadmap roadmap-down roadmap-done">
+					<div class="single-roadmap roadmap-down">
 						<h6>Q1/2019</h6>
 						<p>Both the tokens will be listed on exchanges and the price stabilization mechanism is activated.</p>
 					</div>
