Remove "Our" before "Roadmap"

--- a/index.html
+++ b/index.html
@@ -296,7 +296,7 @@
 			<div class="row">
 				<div class="col-lg-12">
 					<div class="center-heading">
-						<h2 class="section-title">Our Roadmap</h2>
+						<h2 class="section-title">Roadmap</h2>
 					</div>
 				</div>
 			</div>
