--- a/index.html
+++ b/index.html
@@ -306,45 +306,45 @@
 						<h6>Q4/2018</h6>
 						<p>Double tokens & bidding system: user can transfer 2 types of token on-chain, and can bid/ask for NDR/STB directly from the wallet.</p>
 					</div>
-				</div><!-- .col  -->
+				</div>
 				<div class="col-lg width-0">
 					<div class="single-roadmap roadmap-down">
 						<h6>Q1/2019</h6>
 						<p>Both the tokens will be listed on exchanges and the price stabilization mechanism is activated.</p>
 					</div>
-				</div><!-- .col  -->
+				</div>
 				<div class="col-lg">
 					<div class="single-roadmap roadmap-lg">
 						<h6>Q2/2019</h6>
 						<p>Retail and e-commerce platforms integration.</p>
 					</div>
-				</div><!-- .col  -->
+				</div>
 				<div class="col-lg width-0">
 					<div class="single-roadmap roadmap-down">
 						<h6>Q3/2019</h6>
 						<p>On-chain Governance: Voting by Activity.</p>
 					</div>
-				</div><!-- .col  -->
+				</div>
 				<div class="col-lg">
 					<div class="single-roadmap roadmap-sm">
 						<h6>Q1/2020</h6>
 						<p>Staking Service Network: Price Oracle & Input Locking.</p>
 					</div>
-				</div><!-- .col  -->
+				</div>
 				<div class="col-lg width-0">
 					<div class="single-roadmap roadmap-down">
 						<h6>Q2/2020</h6>
 						<p>Partnership for the future EcoSystem</p>
 					</div>
-				</div><!-- .col  -->
+				</div>
 				<div class="col-lg">
 					<div class="single-roadmap roadmap-lg">
 						<h6>Q4/2020</h6>
 						<p>Sharding.</p>
 					</div>
-				</div><!-- .col  -->
-			</div><!-- .row  -->
-		</div><!-- .container  -->
+				</div>
+			</div>
+		</div>
 	</section>
 	<!-- ***** Roadmap End ***** -->
 
