Fix the incorrect roadmap after merge.

--- a/index.html
+++ b/index.html
@@ -334,7 +334,7 @@
 				<div class="col-lg width-0">
 					<div class="single-roadmap roadmap-down">
 						<h6>Q2/2020</h6>
-						<p>Partnership for the future EcoSystem</p>
+						<p>Cross-chain Absorption</p>
 					</div>
 				</div>
 				<div class="col-lg">
