--- a/index.html
+++ b/index.html
@@ -304,13 +304,13 @@
 				<div class="col-lg">
 					<div class="single-roadmap roadmap-sm">
 						<h6>Q4/2018</h6>
-						<p>Double tokens & bidding system: user can transfer 2 types of token on-chain, and can bid/ask for NDR/STB directly from the wallet.</p>
+						<p>Double tokens & bidding system.</p>
 					</div>
 				</div>
 				<div class="col-lg width-0">
 					<div class="single-roadmap roadmap-down">
 						<h6>Q1/2019</h6>
-						<p>Both the tokens will be listed on exchanges and the price stabilization mechanism is activated.</p>
+						<p>Exchanges listing & price stabilization mechanism.</p>
 					</div>
 				</div>
 				<div class="col-lg">
@@ -328,7 +328,7 @@
 				<div class="col-lg">
 					<div class="single-roadmap roadmap-sm">
 						<h6>Q1/2020</h6>
-						<p>Staking Service Network: Price Oracle & Input Locking.</p>
+						<p>Staking Service Network</p>
 					</div>
 				</div>
 				<div class="col-lg width-0">
@@ -341,6 +341,12 @@
 					<div class="single-roadmap roadmap-lg">
 						<h6>Q4/2020</h6>
 						<p>Sharding.</p>
+					</div>
+				</div>
+				<div class="col-lg">
+					<div class="single-roadmap roadmap-down">
+						<h6>Q2/2021</h6>
+						<p>UTXO-Oriented Smart Contract.</p>
 					</div>
 				</div>
 			</div>
