--- a/index.html
+++ b/index.html
@@ -310,7 +310,7 @@
 				<div class="col-lg width-0">
 					<div class="single-roadmap roadmap-down">
 						<h6>Q1/2019</h6>
-						<p>Exchanges listing & price stabilization mechanism.</p>
+						<p>Exchanges listing & price stabilization.</p>
 					</div>
 				</div>
 				<div class="col-lg">
