--- a/index.html
+++ b/index.html
@@ -203,23 +203,37 @@
 						<td>1</td>
 					</tr>
 					<tr>
-						<td scope="row" rowspan="3">Token function</td>
-						<td>NDR: high risk high reward investment</td>
-						<td>Shares: low risk high reward investment</td>
-						<td>MKR: governance token, low risk low reward.</td>
+						<td scope="row" rowspan="3">Token Function</td>
+						<td>NDR: high risk - high reward investment</td>
+						<td>Shares: low risk - high reward investment</td>
+						<td>MKR: governance token</td>
 						<td></td>
 					</tr>
 					<tr>
 						<td></td>
-						<td>Bond: high risk low reward investment</td>
-						<td>(ETH) low reward collateral investment</td>
+						<td>Bond: high risk - low reward investment</td>
+						<td>ETH: collateral investment</td>
 						<td></td>
 					</tr>
 					<tr>
-						<td>STB: no risk - no reward</td>
-						<td>Basis: no risk - no reward</td>
-						<td>DAI: no risk - no reward</td>
-						<td>USDT: an IOU token</td>
+						<td>STB: no risk - no reward stablecoin</td>
+						<td>Basis: no risk - no reward stablecoin</td>
+						<td>DAI: loosely IOU token</td>
+						<td>USDT: IOU token</td>
+					</tr>
+					<tr>
+						<td scope="row">Stablecoin Creation</td>
+						<td><b>Converted from NDR</b> with market-driven exchange rate, autonomous</td>
+						<td><b>Out of thin air</b>, autonomous</td>
+						<td><b>Out of thin air</b>, manually by ETH holder</td>
+						<td><b>Out of thin air</b>, manually by Tether (the companny)</td>
+					</tr>
+					<tr>
+						<td scope="row">Capital Value Flow</td>
+						<td>Circulated <b>inside the system</b></td>
+						<td>Given directly to Share holder possession, <b>outside of the system</b></td>
+						<td>Given directly to ETH holder possession, <b>outside of the system</b></td>
+						<td>Given directly to the companny, <b>outside of the system</b></td>
 					</tr>
 					<tr>
 						<td scope="row">Expansion</td>
@@ -568,7 +582,7 @@
 							</div>
 						</div>
 						<h3 class="team-name">Antony Pham</h3>
-						<span>Chief Technology Officer, Co-founder</span>
+						<span>Chief Technology Officer, Founder</span>
 						<span>Blockchain Advisor of Nexty Platform</span>
 					</div>
 				</div>
@@ -647,21 +661,6 @@
 							<span>Researcher at Toulouse School of Economics</span>
 						</div>
 					</div>
-				<div class="col-lg-3 col-md-4 col-sm-6 col-xs-12 team-member" data-scroll-reveal="enter bottom move 50px over 0.6s after 0.8s">
-					<div class="team-round">
-						<div class="profile">
-							<div class="img">
-								<img src="assets/images/team/bitcoin-benny.jpg" alt="">
-								<ul class="social">
-									<li><a href="http://bitcoinbenny.com/" target="_blank"><i class="fa fa-id-badge"></i></a></li>
-								</ul>
-							</div>
-						</div>
-						<h3 class="team-name">Ben "Bitcoin Benny" Fairbank</h3>
-						<span>Blockchain Incubator & Influencer</span>
-						<span>General Manager of Komodo Platform</span>
-					</div>
-				</div>
 			</div>
 		</div>
 	</section>
@@ -690,7 +689,7 @@
 			<div class="container">
 				<div class="row">
 					<div class="col-lg-5">
-						<p class="copyright">2018 © Endurio - A Scalable Price-Stable Cryptocurrency with Autonomous Elastic Supply</p>
+						<p class="copyright">2018 © Endurio - A Scalable Stablecoin with Autonomous Elastic Supply</p>
 					</div>
 				</div>
 			</div>
