--- a/index.html
+++ b/index.html
@@ -582,8 +582,8 @@
 							</div>
 						</div>
 						<h3 class="team-name">Antony Pham</h3>
-						<span>Chief Technology Officer, Founder</span>
-						<span>Blockchain Advisor of Nexty Platform</span>
+						<span>Chief Technology Officer</span>
+						<span>Founder</span>
 					</div>
 				</div>
 				<div class="col-lg-3 col-md-4 col-sm-6 col-xs-12 team-member" data-scroll-reveal="enter bottom move 50px over 0.6s after 0.8s">
@@ -616,6 +616,37 @@
 						<span>FRM & CFA Charterholder</span>
 					</div>
 				</div>
+			</div>
+		</div>
+	</section>
+	<!-- ***** Team End ***** -->
+
+	<!-- ***** Advisors Start ***** -->
+	<section class="section bg-bottom" id="team">
+		<div class="container">
+			<div class="row">
+				<div class="col-lg-12">
+					<div class="center-heading">
+						<h2 class="section-title">Advisors</h2>
+					</div>
+				</div>
+			</div>
+			<div class="row d-flex justify-content-center">
+				<div class="col-lg-3 col-md-4 col-sm-6 col-xs-12 team-member" data-scroll-reveal="enter bottom move 50px over 0.6s after 0.8s">
+					<div class="team-round">
+						<div class="profile">
+							<div class="img">
+								<img src="assets/images/team/manh-hung-nguyen.jpg" alt="manh-hung-nguyen">
+								<ul class="social">
+									<li><a href="https://www.tse-fr.eu/people/manh-hung-nguyen?lang=en" target="_blank"><i class="fa fa-id-badge"></i></a></li>
+								</ul>
+							</div>
+						</div>
+						<h3 class="team-name">Manh-Hung Nguyen, Ph.D.</h3>
+						<span>Economic Advisor</span>
+						<span>Researcher at Toulouse School of Economics</span>
+					</div>
+				</div>
 				<div class="col-lg-3 col-md-4 col-sm-6 col-xs-12 team-member" data-scroll-reveal="enter bottom move 50px over 0.6s after 0.6s">
 					<div class="team-round">
 						<div class="profile">
@@ -631,6 +662,22 @@
 						<span>CTO, Founder of Nexty Platform</span>
 					</div>
 				</div>
+			</div>
+		</div>
+	</section>
+	<!-- ***** Advisor End ***** -->
+
+	<!-- ***** Contributors Start ***** -->
+	<section class="section bg-bottom" id="team">
+		<div class="container">
+			<div class="row">
+				<div class="col-lg-12">
+					<div class="center-heading">
+						<h2 class="section-title">Contributors</h2>
+					</div>
+				</div>
+			</div>
+			<div class="row d-flex justify-content-center">
 				<div class="col-lg-3 col-md-4 col-sm-6 col-xs-12 team-member" data-scroll-reveal="enter bottom move 50px over 0.6s after 0.6s">
 					<div class="team-round">
 						<div class="profile">
@@ -642,29 +689,13 @@
 							</div>
 						</div>
 						<h3 class="team-name">Ha Dang</h3>
-						<span>Technical Advisor</span>
 						<span>Core Blockchain Specialist of Nexty Platform</span>
 					</div>
 				</div>
-				<div class="col-lg-3 col-md-4 col-sm-6 col-xs-12 team-member" data-scroll-reveal="enter bottom move 50px over 0.6s after 0.8s">
-						<div class="team-round">
-							<div class="profile">
-								<div class="img">
-									<img src="assets/images/team/manh-hung-nguyen.jpg" alt="manh-hung-nguyen">
-									<ul class="social">
-										<li><a href="https://www.tse-fr.eu/people/manh-hung-nguyen?lang=en" target="_blank"><i class="fa fa-id-badge"></i></a></li>
-									</ul>
-								</div>
-							</div>
-							<h3 class="team-name">Manh-Hung Nguyen, Ph.D.</h3>
-							<span>Economic Advisor</span>
-							<span>Researcher at Toulouse School of Economics</span>
-						</div>
-					</div>
 			</div>
 		</div>
 	</section>
-	<!-- ***** Team End ***** -->
+	<!-- ***** Contributors End ***** -->
 
 	<!-- ***** Contact & Footer Start ***** -->
 	<footer id="contact">
